package part2;

import java.util.Observer;

@SuppressWarnings("deprecation")
public interface Subject {
    public void registerObserver(Observer obs);
    public void removeObserver(Observer obs);
    public void notifyObservers();
}